@@ -5,6 +5,7 @@ MANIFEST
 README
 SPEC
 eg/dump.pl
+eg/bench.pl
 lib/Parse/HTTP/UserAgent.pm
 lib/Parse/HTTP/UserAgent/Constants.pm
 lib/Parse/HTTP/UserAgent/Base/Dumper.pm
